use plain progress for circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           command: dagger call --progress=plain -m ci ci --dir .
       - run:
           name: publish image
-          command: dagger call -m ci publish --dir . --token env:DOCKER_TOKEN
+          command: dagger call --progress=plain -m ci publish --dir . --token env:DOCKER_TOKEN
       - run:
           name: Stop Dagger Engine
           command: docker stop -t 300 $(docker ps --filter name="dagger-engine-*" -q)
