--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,5 +21,5 @@ build:
     - dagger call -m ci ci --dir .
     # this step intentionally does not pass token to show the failure condition.
     # dagger call -m ci publish --dir . --token env:DOCKER_TOKEN
-    - dagger call -m ci publish --dir . --commit env:CI_COMMIT_SHORT_SHA
+    - dagger call -m ci publish --dir . --commit $CI_COMMIT_SHORT_SHA
     - docker stop -t 300 $(docker ps --filter name="dagger-engine-*" -q)
