--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 .vscode/
+
+# Dagger Modules 
+dagger/internal
+dagger.gen.go
