--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,8 @@
 build:
   extends: [.dagger]
   script:
-    - dagger call -m ci ci --dir .
+    - dagger call -m ci ci --dir . --env gitlab
     # this step intentionally does not pass token to show the failure condition.
     # dagger call -m ci publish --dir . --token env:DOCKER_TOKEN
-    - dagger call -m ci publish --dir . --commit $CI_COMMIT_SHORT_SHA
+    - dagger call -m ci publish --dir . --commit $CI_COMMIT_SHORT_SHA --env gitlab
     - docker stop -t 300 $(docker ps --filter name="dagger-engine-*" -q)
