run pipelineon ado

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ steps:
   displayName: 'Install Dagger CLI'
   # assumes a Go project
   # modify to use different function(s) as needed
-- script: dagger -m github.com/kpenfound/dagger-modules/golang@v0.2.0 call build --project=. --args=.
+- script: dagger call ci --dir .
   displayName: 'Call Dagger Function'
   env:
     # assumes the Dagger Cloud token is
