--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,9 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+variables:
+  CI: true
+
 steps:
 - script: curl -L https://dl.dagger.io/dagger/install.sh | BIN_DIR=$HOME/.local/bin sh
   displayName: 'Install Dagger CLI'
@@ -22,4 +25,3 @@ steps:
     # set via the Azure Pipeline settings UI/CLI
     # the secret is then explicitly mapped to the script env
     DAGGER_CLOUD_TOKEN: $(DAGGER_CLOUD_TOKEN)
-    CI: true 
