--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ steps:
   # assumes a Go project
   # modify to use different function(s) as needed
 - script: env 
+- script: git branch
 - script: dagger call ci --dir .
   displayName: 'Call Dagger Function'
   env:
