--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,31 @@
+yaml
 version: 2.1
-
 jobs:
-  build:
-    machine:
-      image: ubuntu-2004:202010-01
-    resource_class: medium
+  hello:
+    docker:
+      - image: cimg/base:2024.09
+    environment: # for GitHub, GitLab, BitBucket only
+      CIRCLE_PIPELINE_NUMBER: << pipeline.number >> # for GitHub, GitLab, BitBucket only
+      CIRCLE_PIPELINE_TRIGGER_LOGIN: << pipeline.trigger_parameters.gitlab.user_username >> # for GitLab only
+      CIRCLE_PIPELINE_REPO_URL: << pipeline.trigger_parameters.gitlab.repo_url >> # for GitLab only
+      CIRCLE_PIPELINE_REPO_FULL_NAME: << pipeline.trigger_parameters.gitlab.repo_name >> # for GitLab only
     steps:
-      - checkout
       - run:
           name: Install Dagger CLI
-          command: cd /usr/local && { curl -L https://dl.dagger.io/dagger/install.sh | sudo sh; cd -; }
+          command: curl -fsSL https://dl.dagger.io/dagger/install.sh | BIN_DIR=$HOME/.local/bin sh
       - run:
-          name: smoke tests
-          command: dagger call -m ci ci --dir . --env circleci
-      - run:
-          name: smoke tests again
-          command: dagger call -m ci ci --dir . --env circleci2ndtime
-      - run:
-          name: publish image
-          command: dagger call -m ci publish --dir . --token env:DOCKER_TOKEN --commit $CIRCLE_SHA1
+          name: Call Dagger Function
+          command: dagger -m github.com/shykes/daggerverse/hello@v0.1.2 call hello --greeting="bonjour" --name="monde"
+      # for ephemeral runners only: override the default docker stop timeout and
+      # give the Dagger Engine more time to push cache data to Dagger Cloud
       - run:
           name: Stop Dagger Engine
           command: docker stop -t 300 $(docker ps --filter name="dagger-engine-*" -q)
+          when: always
+workflows:
+  dagger:
+    jobs:
+      - hello
+
+# assumes the Dagger Cloud token is
+# in a project environment variable named DAGGER_CLOUD_TOKEN
