--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,16 +9,7 @@ jobs:
       - checkout
       - run:
           name: Install Dagger CLI
-          command: cd /usr/local && { curl -L https://dl.dagger.io/dagger/install.sh | sudo sh; cd -; }
+          command: cd /usr/local && { curl -L https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=0.12.5 sudo -E sh; cd -; }
       - run:
-          name: smoke tests
-          command: dagger call -m ci ci --dir . --env circleci
-      - run:
-          name: smoke tests again
-          command: dagger call -m ci ci --dir . --env circleci2ndtime
-      - run:
-          name: publish image
-          command: dagger call -m ci publish --dir . --token env:DOCKER_TOKEN --commit $CIRCLE_SHA1
-      - run:
-          name: Stop Dagger Engine
-          command: docker stop -t 300 $(docker ps --filter name="dagger-engine-*" -q)
+          name: matrix tests
+          command: dagger call -m ts build --src="https://github.com/golang/example#master:hello" entries
