--- a/.harness/pipelines/snippetbox.yaml
+++ b/.harness/pipelines/snippetbox.yaml
@@ -1,5 +1,5 @@
 pipeline:
-  identifier: Build_levlaz_snippetbox_1730147059412
+  identifier: Build Snippetbox Singly
   name: Build snippetbox
   orgIdentifier: default
   projectIdentifier: snippetbox
@@ -20,29 +20,17 @@ pipeline:
           execution:
             steps:
               - step:
-                  identifier: gobuild
-                  name: go_build
+                  identifier: Dagger Install
+                  name: dagger_install
                   spec:
-                    command: go build
+                    command: curl -L https://dl.dagger.io/dagger/install.sh | BIN_DIR=$HOME/.local/bin sh
                   timeout: ""
                   type: Run
               - step:
-                  identifier: gotestcoverage
-                  name: go_test_coverage
+                  identifier: Dagger Pipeline
+                  name: dagger_run
                   spec:
-                    command: go test -coverprofile=coverage.out ./...
-                  timeout: ""
-                  type: Run
-              - step:
-                  identifier: gotestreport
-                  name: go_test_report
-                  spec:
-                    command: "export GOBIN=/home/harness/go/bin\n\t\texport PATH=/home/harness/go/bin:$PATH\n\t\techo $PATH\n\t\tgo install github.com/jstemmer/go-junit-report/v2@latest\n\t\tgo test -v 2>&1 ./... | go-junit-report -set-exit-code > report.xml"
-                    reports:
-                      spec:
-                        paths:
-                          - /harness/report.xml
-                      type: JUnit
+                    command: dagger call ci
                   timeout: ""
                   type: Run
           platform:
