--- a/.harness/pipelines/snippetbox.yaml
+++ b/.harness/pipelines/snippetbox.yaml
@@ -1,14 +1,15 @@
 pipeline:
-  identifier: Build_snippetbox_pipeline_multi_1730232178498
-  name: Build snippetbox-pipeline-multi
+  identifier: build_snippetbox
+  name: Build snippetbox
   orgIdentifier: default
   projectIdentifier: snippetbox
   properties:
     ci:
       codebase:
         build: <+input>
-        repoName: snippetbox-pipeline-multi
-  stages:
+        connectorRef: account.Github_OAuth_1726074577341
+        repoName: levlaz/snippetbox
+ stages:
     - stage:
         identifier: build
         name: build
@@ -58,6 +59,13 @@ pipeline:
                   name: Stop Dagger Engine
                   spec:
                     command: docker stop -t 300 $(docker ps --filter name="dagger-engine-*" -q)
+                  timeout: ""
+                  type: Run
+              - step:
+                  identifier: printEngineLogs
+                  name: Print Engine Logs
+                  spec:
+                    command: docker logs -t 300 $(docker ps -a --filter name="dagger-engine-*" -q)
                   timeout: ""
                   type: Run
           platform:
