--- a/.harness/pipelines/snippetbox-single.yaml
+++ b/.harness/pipelines/snippetbox-single.yaml
@@ -30,7 +30,7 @@ pipeline:
                   identifier: daggerInstall
                   name: Install Dagger
                   spec:
-                    command: curl -L https://dl.dagger.io/dagger/install.sh | BIN_DIR=$HOME/.local/bin sh
+                    command: curl -L https://dl.dagger.io/dagger/install.sh | DAGGER_COMMIT=9643b8daadfa457c570289ced9e885b9a10e9480 BIN_DIR=$HOME/.local/bin sh
                   timeout: ""
                   type: Run
               - step:
