dagger image pull testing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,5 +11,9 @@ jobs:
           name: Install Dagger CLI
           command: cd /usr/local && { curl -L https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=0.11 sudo -E sh; cd -; }
       - run:
+          # adding this step to test out how long it takes to pull the dagger image
+          name: Pull Dagger Image
+          command: dagger functions
+      - run:
           name: matrix tests
           command: dagger call -m ts build --src="https://github.com/golang/example#master:hello" entries
