--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,16 @@ jobs:
           command: cd /usr/local && { curl -L https://dl.dagger.io/dagger/install.sh | sudo -E sh; cd -; }
       - run:
           # adding this step to test out how long it takes to pull the dagger image
-          name: Pull Dagger Image
-          command: dagger functions
+          name: Pull Dagger Image & Run Core
+          command: dagger core --progress=plain
+      - run:
+          # adding this step to test out how long it takes to call functions the first time with installing module
+          name: Call Functions First Time 
+          command: dagger functions --progress=plain
+      - run:
+          # adding this step to test out how long it takes to call functions the second time
+          name: Call Functions Second Time
+          command: dagger functions --progress=plain
       - run:
           name: matrix tests
           command: dagger call -m ts build --src="https://github.com/golang/example#master:hello" entries
