--- a/.github/workflows/dagger.yml
+++ b/.github/workflows/dagger.yml
@@ -14,18 +14,22 @@ jobs:
         with:
           verb: core
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+          version: "0.15.1"
       - name: Run Functions First Time
         uses: dagger/dagger-for-github@v6.15.1
         with:
           verb: functions
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+          version: "0.15.1"
       - name: Run Functions Second Time
         uses: dagger/dagger-for-github@v6.15.1
         with:
           verb: functions
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+          version: "0.15.1"
       - name: Run CI pipeline
         uses: dagger/dagger-for-github@v6.15.1
         with:
           call: ci
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+          version: "0.15.1"
