--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,13 @@
 build:
   extends: [.dagger]
   script:
-    - dagger call -m ci ci --dir . --env gitlab
-    # this step intentionally does not pass token to show the failure condition.
-    # dagger call -m ci publish --dir . --token env:DOCKER_TOKEN
-    - dagger call -m ci publish --dir . --commit $CI_COMMIT_SHORT_SHA --env gitlab
-    - docker stop -t 300 $(docker ps --filter name="dagger-engine-*" -q)
+    # test speed to pull engine
+    - dagger core
+    # test speed to call functions the first time
+    - dagger functions 
+    # test speed to call functions the second time
+    - dagger functions 
+    # test speed to call ci
+    - dagger call ci 
+    # test speed to call ci and see cache
+    - dagger call ci 
