--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,22 +17,15 @@
     - cd /usr/local && { curl -L https://dl.dagger.io/dagger/install.sh | sh; cd -; }
 build:
   extends: [.dagger]
-  # test speed to pull engine
-  stage: pull_engine
-  - dagger core
+  script:
+    # test speed to pull engine
+    - dagger core
+    # test speed to call functions the first time
+    - dagger functions 
+    # test speed to call functions the second time
+    - dagger functions 
+    # test speed to call ci
+    - dagger call ci 
+    # test speed to call ci and see cache
+    - dagger -vvv call ci 
 
-  # test speed to call functions the first time
-  stage: first_functions
-  - dagger functions 
-
-  # test speed to call functions the second time
-  stage: second_functions
-  - dagger functions 
-
-  # test speed to call ci
-  stage: ci_run
-  - dagger call ci 
-
-  # test speed to call ci and see cache
-  stage: ci_cache
-  - dagger -vvv call ci 
