--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,9 @@
+stages:
+  - prepare
+  - test
+  - build
+  - cache_check
+
 .docker:
   image: golang:alpine
   services:
@@ -15,17 +21,28 @@
   before_script:
     - apk add docker-cli curl
     - cd /usr/local && { curl -L https://dl.dagger.io/dagger/install.sh | sh; cd -; }
-build:
-  extends: [.dagger]
-  script:
-    # test speed to pull engine
-    - dagger core
-    # test speed to call functions the first time
-    - dagger functions 
-    # test speed to call functions the second time
-    - dagger functions 
-    # test speed to call ci
-    - dagger call ci 
-    # test speed to call ci and see cache
-    - dagger -vvv call ci 
 
+dagger-engine-test:
+  extends: [.dagger]
+  stage: prepare
+  script:
+    - dagger core
+
+dagger-functions-test:
+  extends: [.dagger]
+  stage: test
+  script:
+    - dagger functions
+    - dagger functions  # Second run to test caching
+
+dagger-ci-test:
+  extends: [.dagger]
+  stage: build
+  script:
+    - dagger call ci
+
+dagger-ci-test-cache:
+  extends: [.dagger]
+  stage: cache_check
+  script:
+    - dagger call ci  # second run to check cache
