--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
 - script: git branch
 - script: git checkout $(Build.SourceBranchName)
   displayName: 'Checkout Source Branch'
-- script: dagger call ci --dir .
+- script: dagger call ci
   displayName: 'Call Dagger Function'
   env:
     # assumes the Dagger Cloud token is
