--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
   # - script: env 
   # - script: git branch
   # - script: git checkout $(Build.SourceBranchName)
-  displayName: 'Checkout Source Branch'
+  # displayName: 'Checkout Source Branch'
 - script: dagger call ci
   displayName: 'Call Dagger Function'
   env:
