--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,9 @@ variables:
   CI: "true"
 
 steps:
+- checkout: self
+  fetchDepth: 0
+  displayName: 'Checkout Source Code, fetch full history'
 - script: curl -L https://dl.dagger.io/dagger/install.sh | BIN_DIR=$HOME/.local/bin sh
   displayName: 'Install Dagger CLI'
 - script: env 
