--- a/.github/workflows/dagger.yml
+++ b/.github/workflows/dagger.yml
@@ -9,7 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     environment: release
     steps:
-      - uses: actions/checkout@v3
+      - name: checkout
+        uses: actions/checkout@v4
+
       - name: build release
       	uses: dagger/dagger-for-github@8.0.0
 	with:
