--- a/.github/workflows/dagger.yml
+++ b/.github/workflows/dagger.yml
@@ -1,7 +1,7 @@
 name: dagger
 on:
   push:
-    branches: ['*']
+    branches: ["*"]
 
 jobs:
   build:
@@ -13,8 +13,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: build release
-      	uses: dagger/dagger-for-github@8.0.0
-	with:
-		version: "latest"
-		args: ci 
-		cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        uses: dagger/dagger-for-github@8.0.0
+        with:
+          version: "latest"
+          args: ci
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
